fix: truncate dish title with ellipsis at 320px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,8 +270,6 @@ body {
   border-radius: 15px;
   box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
   display: flex;
-  align-items: stretch;
-  justify-content: space-between;
   position: relative;
 }
 .dish__content {
@@ -283,6 +281,9 @@ body {
   font-size: 1.125rem;
   font-weight: 500;
   padding-bottom: 0.375rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .dish__details {
   display: flex;
